fix ios button text alignment

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ li input:focus {
 button.remove {
   padding: 0;
   /* font-size: 0.84rem; */
+  text-align: -webkit-center;
   text-align: center;
   line-height: normal;
   width: 1.5rem;
@@ -115,6 +116,7 @@ button.edit {
   /* VVV push buttons to right side VVV */
   margin-left: auto;
   margin-right: 1vw;
+  text-align: -webkit-center;
   text-align: center;
   line-height: normal;
   width: 1.5rem;
@@ -127,6 +129,7 @@ button.edit {
 
 button.discard-edit {
   padding: 0;
+  text-align: -webkit-center;
   text-align: center;
   line-height: normal;
   width: 1.5rem;
@@ -141,6 +144,7 @@ button.save-edit {
   padding: 0;
   margin-left: 1vw;
   margin-right: 1vw;
+  text-align: -webkit-center;
   text-align: center;
   line-height: normal;
   width: 1.5rem;
